--- a/src/main/webapp/WEB-INF/messages/messages.properties
+++ b/src/main/webapp/WEB-INF/messages/messages.properties
@@ -1,2 +1,7 @@
-welcome.title=Congratulations! Spring is running!
+welcome.title=Welcome Taman
 typeMismatch=could not be parsed
+
+#Dash board
+no.unit=No.Unit
+password=Kata Laluan
+login=Login
